Old commit with source code

--- a/tex/paper/main.bib
+++ b/tex/paper/main.bib
@@ -121,6 +121,7 @@
 }
 
 @misc{cve:rust,
+	key 	= {cve:rust},
 	title 	= {{R}ust vulnerability statistics},
 	url		= {https://www.cvedetails.com/product/48677/Rust-lang-Rust.html?vendor_id=19029},
 }
@@ -179,6 +180,7 @@
 }
 
 @misc{redox,
+	key = {redox},
 	title = {Redox},
 	url = {https://www.redox-os.org/},
 }
@@ -217,6 +219,7 @@
 }
 
 @misc{tor,
+	key = {tor},
 	title = {Rust in {T}or},
 	url = {https://trac.torproject.org/projects/tor/wiki/RustInTor},
 }
